@@ -1,6 +1,7 @@
 Version 1.1.11 (released ??-???-????)
 
   * fix broken standalone.py -c and -d options handling
+  * avoid stack track when asked to checkout a directory (issue #478)
 
 Version 1.1.10 (released 15-Mar-2011)
 
